#1 importing directories in scss, #2 fix issue with HTML changes

--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="ExpressJS server app with live-reloading using BrowserSync, NoDemon and Gulp4">
+    <meta name="keywords" content="ExpressJS, BrowserSync, NoDemon, Gulp4">
+    <meta name="author" content="Fotis Pegios">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index.html</title>
-    <link href="dist/css/main.min.css" rel="stylesheet"/>    
+
+    <!-- STYLES -->
+    <link href="dist/css/main.min.css" rel="stylesheet"/>   
+    <!-- STYLES  --> 
 </head>
 <body>
     <h1>Hello World!</h1>
+
+    <div class="page1">
+        <p class="red">CARD1</p>
+    </div>
+    <div class="page2">
+        <p class="yellow">CARD2</p>
+    </div>
     
+    <!-- SCRIPTS -->
     <script src="dist/js/main.min.js"></script>
+    <!-- SCRIPTS -->
 </body>
 </html>
