--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="keywords" content="ExpressJS, BrowserSync, NoDemon, Gulp4">
     <meta name="author" content="Fotis Pegios">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index.html</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" />
+
+    <title>index.html</title>    
 
     <!-- STYLES -->
     <link href="dist/css/main.min.css" rel="stylesheet"/>   
